<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/_purple"
        android:padding="12dp"
        android:text="@string/travel_cost"
        android:textColor="@color/white"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/distance"
        android:inputType="numberDecimal"
        android:layout_margin="12sp"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:text="@string/total_km"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:layout_margin="12sp"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/price_per_liter"
        android:gravity="center_horizontal"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal"
        android:layout_margin="12sp"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/kms_per_liter"
        android:gravity="center_horizontal"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_spend"
        android:gravity="center_horizontal"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_totalprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/total_value"
        android:textColor="@color/_purple"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>
    
    <Button
        android:id="@+id/button_calcule"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center"
        android:text="@string/calculate"
        android:fontFamily="monospace"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/_bluemarine"
        />



</LinearLayout>